--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <form>
                                 <div class="form-row px-3">
                                     <label class="px-2" for="exampleFormControlSelect1">Username <span class="text-muted font-italic">(must have the standard password)</span></label>
-                                    <input type="text" class="form-control" id="username" value="wayne.do@ama-assn.org" required>
+                                    <input type="text" class="form-control" id="username" value="vsharma@ama-assn.org" required>
                                 </div>
                             </form>
                         </div>
