--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     }
 </script>
 
-<script type="text/javascript" src="https://em-dev.ama-assn.org/apijs"></script>
+<script type="text/javascript" src="https://em-stg.ama-assn.org/apijs"></script>
 
 </body>
 </html>
