--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
         return {
             launchIn: "iframe", //iframe, window, tab
             keys: {
-                    "clientId": "HuvbptM6yCYvM9EmUZcrzvKdFkUa",
-					"clientSecret": "v_fNtf5o3f4ZHf6SOfzVrYhL1swa",
+                    "clientId": "bd51d408-9015-4c95-a21e-20cb0328adc5",    
+                    "clientSecret": "0cc14c77-2dda-446e-a2c3-8dd888b79da0",
                     "organizationId" : "",
                     "userId" : ""
                 },
@@ -209,7 +209,7 @@
     }
 </script>
 
-<script type="text/javascript" src="https://em-stg.ama-assn.org/apijs"></script>
+<script type="text/javascript" src="https://em.ama-assn.org/apijs"></script>
 
 </body>
 </html>
