--- a/index.html
+++ b/index.html
@@ -2,10 +2,214 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Welcome !!!!!!</title>
-  <h1>Welcome !!!!!</h1>
+<title>CPT® E/M Office Visit Coder</title>
 <base href="/">
 <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
 <!--Fixing zoom issue in iphone-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<style>
+    /* login page */
+    body, html{
+        font-family: 'Roboto', sans-serif;
+        height: 100%;
+        color: #464646;
+        line-height: 1.5;
+        margin: 0;
+        padding: 0;
+    }
+    p{
+        font-size: 14px;
+    }
+    .mainBody{
+        height: 100%;
+        width: 100%;
+    }
+    .main-wraper-area{
+        display: flex;
+        flex-direction: column;
+        min-height: calc(100% - 52px);
+        justify-content: space-between;
+    }
+    .contant-login-wrap {
+        max-width: 1200px;
+        min-width: 500px;
+        margin: 0 auto;
+    }
+    .login-header{
+        text-align: center;
+        margin: 10% 0 20px;
+    }
+    .login-header h1{
+        font-weight: 400;
+        font-size: 35px;
+        line-height: 1.3;
+    }
+    .login-header h1 b{
+        font-weight: 600;
+    }
+    .login-header p{
+        margin: 15px 0;
+        min-height: 21px;
+    }
+    .login-from .form-group input {
+        color: #464646;
+        font-size: 14px;
+        width: 100%;
+        height: calc(1.5em + .75rem + 2px);
+        padding: .375rem .75rem;
+        font-weight: 400;
+        line-height: 1.5;
+        background-color: #fff;
+        background-clip: padding-box;
+        border: 1px solid #ced4da;
+        border-radius: .25rem;
+    }
+    .login-from .form-group input:focus{
+        background-color: #fff;
+        border-color: #80bdff;
+        outline: 0;
+        box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+    }
+    .login-from .loginbtn input[type="button"] {
+        width: 100%;
+        margin-bottom: 2px;
+        font-weight: 400;
+        background-color: #581090;
+        color: #fff;
+        display: inline-block;
+        text-align: center;
+        vertical-align: middle;
+        border: 1px solid transparent;
+        padding: .375rem .75rem;
+        font-size: 1rem;
+        line-height: 1.5;
+        cursor: pointer;
+        border-radius: .25rem;
+    }
+    .disclaimer{
+        max-width: 1640px;
+        margin: 0 auto;
+    }
+    .disclaimer p{
+        color: #858585;
+        margin-bottom: 10px;
+        font-size: 13px;
+        padding: 0 15px;
+    }
+    .noDiv{
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    .errorMsg{
+        color: #dc3545;
+    }
+    .form-control.is-invalid:focus, .was-validated .form-control:invalid:focus {
+        border-color: #dc3545;
+        box-shadow: 0 0 0 0.2rem rgba(220,53,69,.25);
+    }
+    .footer-bg{
+        background-color: #F2F2F2;
+        padding: 10px 0;
+    }
+    .footer-bg p{
+        margin: 0;
+        padding: 0 15px;
+        font-size: 14px;
+    }
+    .footer-bg p b{
+        font-weight: 600;
+    }
+</style>
+
+</head>
+    <body>
+        <div class="container-fluid mainBody">
+            <div class="main-wraper-area">
+
+            <div class="contant-login-wrap">
+                <div class="row">
+                    <div class="col-xl-12">
+                        <div class="login-header">
+                            <h1><b >AMA E/M Coder</b><br >Office and Outpatient </h1>
+                            <p class="errorMsg" id="error-msg">&nbsp;</p>
+                        </div>
+                        <div  class="login-from">
+                            <form  name="form" novalidate="" class="form-cls">
+                                <div  class="form-group">
+                                    <input  class="form-control" id="username" name="username" placeholder="Username" required="" type="text">
+                                    <div  class="ng-star-inserted">&nbsp;
+                                    </div>
+                                </div>
+                                <div  class="form-group">
+                                    <input  class="form-control" id ="empass" name="password" placeholder="Password" required="" type="password">
+                                    <div  class="ng-star-inserted">&nbsp;</div>
+                                </div>
+                                <div  class="loginbtn">
+                                    <input type="button" value="Login" onclick="emlogin_process()">
+                                </div>
+                            </form>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <footer class="ng-star-inserted">
+                <div class="disclaimer ng-star-inserted">
+                    <div class="row">
+                        <div  class="col-xl-12">
+                            <p><b>Disclaimer:</b> The information in the Licensed Application is intended to assist health care providers and/or their staff in the identification of Current Procedural Terminology (CPT<code>®</code>) code(s) that may be appropriate to report Evaluation and Management services furnished in the office or other outpatient setting based on user inputs and published AMA coding guidelines. This Licensed Application includes a truncated version of the “full” instructions that appear in the most current CPT publication; providers and/or their staff should be certain to review these full instructions before using and/or if they have any questions while using this tool. This Licensed Application is intended for reference use only, and is not intended to serve as reimbursement advice, a guarantee of coverage, or a guarantee of payment at any particular rate. Third-party payment for medical services is affected by numerous factors. The decision of which code to report must be made by health care providers and/or their staff considering the clinical facts, circumstances, and applicable coding instructions (e.g., the CPT Guidelines contained in this Licensed Application and in the most current CPT publication). Please refer to payer policies and other published instructions for additional information.</p> <p>The Center for Medicare and Medicaid Services is responsible for the Medicare content contained in this application and no endorsement by the AMA is intended or should be implied. Users are encouraged to refer to the current official Medicare program provisions contained in relevant laws, regulations, and rulings.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row footer-bg">
+                    <div class="col-xl-12">
+                        <div class="footer-section">
+                            <p>
+                                <b>©2020 American Medical Association.</b> All rights reserved. CPT is a registered trademark of the American Medical Association.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+        </div>
+    </div>
+
+<script>
+    //console.log("Entering the function em login process")
+    function emlogin_process() {
+        //console.log("Inside the function em login process")
+        var user_name = document.getElementById("username");
+        var pass = document.getElementById("empass");
+        if ("uat" === user_name.value && "ihmiemuat" === pass.value) {
+			document.getElementById('error-msg').innerText = '';
+            //console.log("Login is success");
+            launchingApp();
+		}
+        else {
+			document.getElementById('error-msg').innerText = 'Invalid username or password';
+        }
+    }
+
+    function launchApp() {
+        return {
+            launchIn: "iframe", //iframe, window, tab
+            keys: {
+                    "clientId": "6dc7e9d0-9b51-4253-a2f2-44b2ae79e5b8",
+					          "clientSecret": "7dac19a5-8f2b-4f28-b7d4-2ae84f41f8a6",
+                    "organizationId" : "",
+                    "userId" : ""
+                },
+            tkn : null,  //remove if token is not available or pass token value as null or ''
+        }
+    }
+</script>
+
+<script type="text/javascript" src="https://em-stg.ama-assn.org/apijs"></script>
+
 </body>
 </html>
